muestra los nombres de personajes

--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,15 @@
     <title>Data Lovers</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <h1>Prueba</h1>
-  <body>
+    <body>
+      <h1>Prueba</h1>
+      
+      <div id="div1"></div>
+
+     
     <div id="root"></div>
     <script src="main.js" type="module"></script>
+    <script src = harrypotter.js></script>
   </body>
+
 </html>
