muestra personajes en el DOM

--- a/src/index.html
+++ b/src/index.html
@@ -5,15 +5,11 @@
     <title>Data Lovers</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-    <body>
-      <h1>Prueba</h1>
-      
-      <div id="div1"></div>
-
-     
-    <div id="root"></div>
+  
+  <body>
+    <header>PERSONAJES</header>
+    <main id="root"><article id="cont1"></article></main>
     <script src="main.js" type="module"></script>
-    <script src = harrypotter.js></script>
   </body>
-
+  
 </html>
