--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Data Lovers</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <h1>Prueba</h1>
-  <body>
-    <div id="root"></div>
-    <script src="main.js" type="module"></script>
-  </body>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <title>Data Lovers</title>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+</head>
+
+<body>
+  <header id="cabecera"></header>
+  <main id="root">
+    <article id="cont1"></article>
+    <article id="cont2"></article>
+    <article id="cont3"></article>
+  </main>
+  <footer id="finPag"></footer>
+  <script src="main.js" type="module"></script>
+</body>
+
 </html>
